# MalicEngine

./: .gitignore  CMakeLists.txt  TODO.md
Client/: CMakeLists.txt
Client/include/Client/: Application.h  Camera.h  Core.h  Input.h  Model.h
Client/resources/models/vivian/: readme【一定要看】.txt  vivian.pmx
Client/resources/shaders/: default.frag  default.vert
Client/src/: Application.cpp  CMakeLists.txt  Camera.cpp  Core.cpp  Input.cpp  Model.cpp  main.cpp
Client/src/scripts/: compile_shaders.bat  compile_shaders.sh
Engine/: CMakeLists.txt
Engine/include/Engine/: DescriptorInfo.h  GPUBuffer.h  GPUImage.h  Image2DViewer.h  Malic.h  MalicEntry.h  Material.h  PipelineResources.h  RenderResources.h  Renderer.h  ResourceManager.h  Shader.h  ShaderStages.h  Texture2D.h  UniformBuffer.h  VertexArray.h  VulkanManager.h
Engine/include/Engine/core/: Assert.h  Config.h  Debug.h  Defines.h  Filesystem.h  Logging.h
Engine/include/Engine/pch/: mlc_pch.h
Engine/resources/shaders/: default.frag  default.vert
Engine/scripts/: compile_shaders.bat  compile_shaders.sh
Engine/src/: CMakeLists.txt  GPUBuffer.cpp  GPUImage.cpp  Image2DViewer.cpp  Malic.cpp  Material.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexArray.cpp  VulkanManager.cpp
Engine/src/core/: Debug.cpp  Defines.cpp  Filesystem.cpp  Logging.cpp
